# integrations

./: LICENSE
bubble/: README.md  worker.js
cloudflare/: README.md  worker.js
lovable/: README.md  worker.js
nextjs/: README.md  middleware.js  proxy.ts
prerender-aspnetcore/: Prerender.AspNetCore.csproj  PrerenderMiddleware.cs  PrerenderOptions.cs  PrerenderServiceExtensions.cs  README.md
prerender-aspnetcore/tests/: Prerender.AspNetCore.Tests.csproj  PrerenderMiddlewareTests.cs
prerender-django/: README.md  pyproject.toml
prerender-django/prerender_django/: middleware.py
prerender-django/tests/: settings.py  test_middleware.py
prerender-hapi/: README.md  index.js  package-lock.json  package.json
prerender-hapi/test/: smoke.test.js
prerender-java/: README.md  pom.xml
prerender-java/src/main/java/io/prerender/: PrerenderConfig.java  PrerenderFilter.java
prerender-java/src/test/java/io/prerender/: PrerenderFilterTest.java
prerender-koa/: package.json
